feat: tools page v2, LemonSqueezy API updates, product filters

--- a/env.example
+++ b/env.example
@@ -1,4 +1,8 @@
 # LemonSqueezy API Configuration
 # Copy this file to .env.local and add your actual credentials
-NEXT_PUBLIC_LEMONSQUEEZY_API_KEY=your_lemonsqueezy_api_key_here
+
+# Server-only secret (do NOT expose publicly)
+LEMONSQUEEZY_API_KEY=your_lemonsqueezy_api_key_here
+
+# Public value is safe to expose (used client-side for store selection)
 NEXT_PUBLIC_LEMONSQUEEZY_STORE_ID=your_store_id_here
