chore(supabase): install SDK, add client helper and env placeholders

--- a/env.example
+++ b/env.example
@@ -6,3 +6,15 @@ LEMONSQUEEZY_API_KEY=your_lemonsqueezy_api_key_here
 
 # Public value is safe to expose (used client-side for store selection)
 NEXT_PUBLIC_LEMONSQUEEZY_STORE_ID=your_store_id_here
+
+# Clerk
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
+# Comma-separated owner emails for admin allowlist
+NEXT_PUBLIC_OWNER_EMAILS=
+
+# Supabase
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+# Server-side only (not exposed to client)
+SUPABASE_SERVICE_ROLE_KEY=
